--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.6",
+    "random-token": "0.0.8",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
