--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap-icons": "^1.0.0-alpha3",
     "cloudinary": "^1.21.0",
     "connect-mongo": "^3.1.2",
     "cookie-parser": "^1.4.5",
